feat: connect class project to data-base
