# projeto-aulas/src/routes/users.ts
@@ -1,13 +1,61 @@
-import { Router } from "express";
+import { NextFunction, Router } from "express";
 import UsersController from "../controllers/users";
 
 const router = Router();
 let ctrl = new UsersController();
 
-router.get("/", ctrl.getAll);
-router.get("/:id", ctrl.getById);
+const addPostSchema = (_, __, next: NextFunction) => {
+  /* 
+    #swagger.requestBody = {
+            required: true,
+            content: {
+                "application/json": {
+                    schema: {
+                        $ref: "#/components/schemas/userModel"
+                    }  
+                }
+            }
+    } 
+    */
+  next();
+};
 
-router.post("/", ctrl.create);
+const addGetAllSchema = (_, __, next: NextFunction) => {
+  /* 
+    #swagger.responses[200] = {
+        description: "Some description...",
+        content: {
+            "application/json": {
+                schema:{
+                    $ref: "#/components/schemas/userModelList"
+                }
+            }           
+        }
+    }   
+    */
+  next();
+};
+
+const addGetByIdSchema = (_, __, next: NextFunction) => {
+  /* 
+    #swagger.responses[200] = {
+        description: "Some description...",
+        content: {
+            "application/json": {
+                schema:{
+                    $ref: "#/components/schemas/userModel"
+                }
+            }           
+        }
+    }   
+    */
+  next();
+};
+
+router.get("/", addGetAllSchema, ctrl.getAll);
+router.get("/:id", addGetByIdSchema, ctrl.getById);
+
+router.post("/", addPostSchema, ctrl.create);
 
 router.patch("/:id", ctrl.update);
 
