# projeto-aulas/src/types/user.ts
@@ -1,7 +1,25 @@
-export interface User {
-  id: number;
+export interface UserDTO {
+  id?: string;
   name: string;
   email: string;
-  city: string;
-  uf: string;
+  active: boolean;
+  psw: string;
+  type?: UserTypeDTO;
+}
+export interface UserDB {
+  usu_id: string;
+  usu_nome: string;
+  usu_email: string;
+  usu_ativo: boolean;
+  usu_senha: string;
+}
+
+export interface UserTypeDTO {
+  id?: string;
+  description?: string;
+}
+
+export interface UserTypeDB {
+  per_id: string;
+  per_descricao: string;
 }
