# projeto-aulas/swagger_output.json
@@ -14,10 +14,20 @@
   "paths": {
     "/api/users/": {
       "get": {
+        "tags": [
+          "Users"
+        ],
         "description": "",
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Some description...",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/userModelList"
+                }
+              }
+            }
           },
           "500": {
             "description": "Internal Server Error"
@@ -25,6 +35,9 @@
         }
       },
       "post": {
+        "tags": [
+          "Users"
+        ],
         "description": "",
         "responses": {
           "default": {
@@ -32,27 +45,11 @@
           }
         },
         "requestBody": {
+          "required": true,
           "content": {
             "application/json": {
               "schema": {
-                "type": "object",
-                "properties": {
-                  "id": {
-                    "example": "any"
-                  },
-                  "name": {
-                    "example": "any"
-                  },
-                  "email": {
-                    "example": "any"
-                  },
-                  "city": {
-                    "example": "any"
-                  },
-                  "uf": {
-                    "example": "any"
-                  }
-                }
+                "$ref": "#/components/schemas/userModel"
               }
             }
           }
@@ -61,6 +58,9 @@
     },
     "/api/users/{id}": {
       "get": {
+        "tags": [
+          "Users"
+        ],
         "description": "",
         "parameters": [
           {
@@ -74,7 +74,14 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Some description...",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/userModel"
+                }
+              }
+            }
           },
           "404": {
             "description": "Not Found"
@@ -85,6 +92,9 @@
         }
       },
       "patch": {
+        "tags": [
+          "Users"
+        ],
         "description": "",
         "parameters": [
           {
@@ -113,10 +123,10 @@
                   "email": {
                     "example": "any"
                   },
-                  "city": {
+                  "active": {
                     "example": "any"
                   },
-                  "uf": {
+                  "psw": {
                     "example": "any"
                   }
                 }
@@ -126,6 +136,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Users"
+        ],
         "description": "",
         "parameters": [
           {
@@ -159,6 +172,100 @@
       "bearerAuth": {
         "type": "http",
         "scheme": "bearer"
+      }
+    },
+    "schemas": {
+      "userModel": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "example": "0"
+          },
+          "name": {
+            "type": "string",
+            "example": "UserName"
+          },
+          "email": {
+            "type": "string",
+            "example": "user@email.com"
+          },
+          "active": {
+            "type": "boolean",
+            "example": true
+          },
+          "psw": {
+            "type": "string",
+            "example": "password123"
+          },
+          "type": {
+            "type": "object",
+            "properties": {
+              "id": {
+                "type": "string",
+                "example": "1"
+              },
+              "description": {
+                "type": "string",
+                "example": "userType"
+              }
+            }
+          }
+        }
+      },
+      "userModelList": {
+        "type": "array",
+        "items": {
+          "type": "object",
+          "properties": {
+            "id": {
+              "type": "string",
+              "example": "0"
+            },
+            "name": {
+              "type": "string",
+              "example": "UserName"
+            },
+            "email": {
+              "type": "string",
+              "example": "user@email.com"
+            },
+            "active": {
+              "type": "boolean",
+              "example": true
+            },
+            "psw": {
+              "type": "string",
+              "example": "password123"
+            },
+            "type": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "string",
+                  "example": "1"
+                },
+                "description": {
+                  "type": "string",
+                  "example": "userType"
+                }
+              }
+            }
+          }
+        }
+      },
+      "userType": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "example": "1"
+          },
+          "description": {
+            "type": "string",
+            "example": "userType"
+          }
+        }
       }
     }
   }
